--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<org.projectlombok.version>1.18.24</org.projectlombok.version>
 		<liquibase.version>4.18.0</liquibase.version>
 		<liquibase-hibernate5.version>4.18.0</liquibase-hibernate5.version>
-		<spring-boot.version>2.6.6</spring-boot.version>
+		<spring-boot.version>3.0.1</spring-boot.version>
 		<org.zalando.problem-spring-web>0.27.0</org.zalando.problem-spring-web>
 		<org.springdoc.springdoc-openapi-ui>1.6.14</org.springdoc.springdoc-openapi-ui>
 		<org.springframework.cloud>3.1.5</org.springframework.cloud>
@@ -43,7 +43,8 @@
 		<spring-boot-starter-web-version>3.0.1</spring-boot-starter-web-version>
 		<spring-web-jar-version>6.0.3</spring-web-jar-version>
 		<hibernate-core-version>6.1.6.Final</hibernate-core-version>
-		<maven.compiler.release>17</maven.compiler.release>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 
 	<pluginRepositories>
@@ -87,7 +88,7 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>${h2-version}</version>
-<!--			<scope>test</scope>-->
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
