--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -16,6 +16,8 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
   # Trigger manually
+env:
+  BRANCH_NAME: ${{ github.ref }}
 
 jobs:
   analyze-config:
@@ -67,7 +69,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           # Path to Docker image
-          image-ref: "ghcr.io/catenax-ng/product-value-added-service:${{ github.ref }}"
+          image-ref: "ghcr.io/catenax-ng/product-value-added-service:"${{ env.BRANCH_NAME }}
           format: "sarif"
           output: "trivy-results2.sarif"
           exit-code: "1"
