--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -69,7 +69,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           # Path to Docker image
-          image-ref: "ghcr.io/catenax-ng/product-value-added-service:"${{ env.BRANCH_NAME }}
+          image-ref: "ghcr.io/catenax-ng/product-value-added-service:dev"
           format: "sarif"
           output: "trivy-results2.sarif"
           exit-code: "1"
