--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -37,6 +37,7 @@ jobs:
           format: "sarif"
           output: "trivy-results1.sarif"
           severity: "CRITICAL,HIGH"
+          timeout: "10m"
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
