--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.catenax</groupId>
 	<artifactId>value-added-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>value-added-service</name>
 	<description>Project to Validate Country Risks Score</description>
 	<properties>
