--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,9 @@ on:
     branches:
       - 'main'
       - 'dev'
-
+    tags:
+      - 'v*.*.*'
+      - 'v*.*.*-*'
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
